<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

  <TextView
      android:id="@+id/textViewThemeCAption"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:text="@string/textViewThemeCaption"
      android:textSize="@dimen/fontSizeMain"
      android:fontFamily="@font/rubikbold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/buttonLightTheme"
      style="@style/myButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:text="@string/buttonLightTheme"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewThemeCAption" />

  <Button
      android:id="@+id/buttonDarkTheme"
      style="@style/myButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:text="@string/buttonDarkTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.2"
      app:layout_constraintStart_toEndOf="@+id/buttonLightTheme"
      app:layout_constraintTop_toBottomOf="@+id/textViewThemeCAption" />

  <TextView
      android:id="@+id/textViewLanguageCaption"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/rubikbold"
      android:text="@string/textViewLanguageCaption"
      android:textSize="@dimen/fontSizeMain"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonLightTheme" />

  <Button
      android:id="@+id/buttonEnLanguage"
      style="@style/myButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="24dp"
      android:text="@string/buttonLanguageEn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewLanguageCaption" />

  <Button
      android:id="@+id/buttonDeLanguage"
      style="@style/myButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/buttonLanguageDe"
      app:layout_constraintEnd_toStartOf="@+id/buttonSlLanguage"
      app:layout_constraintStart_toEndOf="@+id/buttonEnLanguage"
      app:layout_constraintTop_toBottomOf="@+id/textViewLanguageCaption" />

  <Button
      android:id="@+id/buttonSlLanguage"
      style="@style/myButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:text="@string/buttonLanguageSl"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewLanguageCaption" />
</androidx.constraintlayout.widget.ConstraintLayout>