<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputDataActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textViewTicketTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopCaptionInput"
        android:fontFamily="@font/rubikbold"
        android:text="@string/advanceTicketCaption"
        android:textSize="@dimen/fontSizeCaptionInput"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/HorizontalGuideline" />

    <EditText
        android:id="@+id/editTextTicketId"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/heightEditTextInput"
        android:layout_marginStart="@dimen/marginStartEditTextInput"
        android:layout_marginTop="@dimen/marginTopCaptionInput"
        android:ems="10"
        android:hint="@string/hintId"
        android:inputType="number"
        android:textSize="@dimen/fontSizeEditTextInput"
        app:layout_constraintStart_toEndOf="@+id/barrierTextView"
        app:layout_constraintTop_toBottomOf="@+id/textViewTicketTitle" />

    <TextView
        android:id="@+id/textViewTicketId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartTextViewInput"
        android:text="@string/textViewId"
        android:textSize="@dimen/fontSizeTextViewInput"
        app:autoSizeTextType="none"
        android:fontFamily="@font/rubikbold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTicketId"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline" />

    <EditText
        android:id="@+id/editTextTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/heightEditTextInput"
        android:layout_marginStart="@dimen/marginStartEditTextInput"
        android:layout_marginTop="@dimen/marginTopEditTextInput"
        android:ems="10"
        android:hint="@string/hintPrice"
        android:inputType="numberDecimal"
        android:textSize="@dimen/fontSizeEditTextInput"
        app:layout_constraintStart_toEndOf="@+id/barrierTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTicketId" />

    <TextView
        android:id="@+id/textViewTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartTextViewInput"
        android:text="@string/textViewPrice"
        android:textSize="@dimen/fontSizeTextViewInput"
        app:autoSizeTextType="none"
        android:fontFamily="@font/rubikbold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTicketPrice"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline" />

    <EditText
        android:id="@+id/editTextTicketDaysAhead"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/heightEditTextInput"
        android:layout_marginStart="@dimen/marginStartEditTextInput"
        android:layout_marginTop="@dimen/marginTopEditTextInput"
        android:ems="10"
        android:hint="@string/hintDaysAhead"
        android:inputType="number"
        android:textSize="@dimen/fontSizeEditTextInput"
        app:layout_constraintStart_toEndOf="@+id/barrierTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTicketPrice" />

    <TextView
        android:id="@+id/textViewTicketDaysAhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartTextViewInput"
        android:text="@string/textViewDaysAhead"
        android:textSize="@dimen/fontSizeTextViewInput"
        app:autoSizeTextType="none"
        android:fontFamily="@font/rubikbold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTicketDaysAhead"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline" />

    <Button
        android:id="@+id/buttonExit"
        style="@style/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginBetweenButtonsInput"
        android:layout_marginTop="@dimen/marginTopButtonMain"
        android:text="@string/buttonExit"
        android:textSize="@dimen/fontSizeButtons"
        app:layout_constraintStart_toEndOf="@+id/buttonAddTicket"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineButton" />

    <Button
        android:id="@+id/buttonAddTicket"
        style="@style/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginBetweenButtonsInput"
        android:layout_marginTop="@dimen/marginTopButtonMain"
        android:text="@string/buttonAdd"
        android:textSize="@dimen/fontSizeButtons"
        app:layout_constraintStart_toEndOf="@+id/buttonScanQRCode"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineButton" />

    <Button
        android:id="@+id/buttonScanQRCode"
        style="@style/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartButtonInput"
        android:layout_marginTop="@dimen/marginTopButtonMain"
        android:text="@string/buttonQrCode"
        android:textSize="@dimen/fontSizeButtons"
        app:layout_constraintStart_toStartOf="@+id/VerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuidelineButton" />

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/moviebackground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuidelineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textViewTicketId,textViewTicketPrice,textViewTicketDaysAhead"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="501dp" />

</androidx.constraintlayout.widget.ConstraintLayout>