<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonInputDataActivity"
        style="@style/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopButtonMain"
        android:text="@string/buttonInput"
        android:textSize="@dimen/fontSizeButtons"
        app:layout_constraintEnd_toStartOf="@+id/buttonAboutActivity"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/buttonAboutActivity"
        style="@style/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopButtonMain"
        android:layout_marginEnd="@dimen/marginEndButtonMain"
        android:text="@string/buttonAbout"
        android:textSize="@dimen/fontSizeButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopTextViewMain"
        android:text="@string/list"
        android:textSize="@dimen/fontSizeMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCaption" />

    <TextView
        android:id="@+id/textViewCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopTextViewMain"
        android:text="@string/listOfAdvanceTicketsCaption"
        android:textSize="@dimen/fontSizeMain"
        android:fontFamily="@font/rubikbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/widthAndHeightImageMIconMain"
        android:layout_height="@dimen/widthAndHeightImageMIconMain"
        android:layout_marginStart="@dimen/marginStartImageMain"
        android:layout_marginTop="@dimen/marginTopImageMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movieicon" />

</androidx.constraintlayout.widget.ConstraintLayout>